--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     </h4>
     <div class="main-bubble">
       <div class="photo">
-        <img src="tseejzurag1.jpg" />
+        <img src="dashka.jpg" />
       </div>
       <h1 style="
               font-size: 16px;
